# moodeng

./: .gitignore  README.md  install.sh  pyproject.toml
src/moodeng/: __init__.py  alerters.py  cli.py  config.py  detector.py  exceptions.py
