[project]
name = "moodeng"
version = "0.1.0"
description = "🦛 Monitor for moo deng the hippo in her youtube stream"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Ted Nyman", email = "t@ted.io" }
]
dependencies = [
    "opencv-python>=4.7.0",
    "yt-dlp>=2023.11.16",
    "ultralytics==8.0.196",
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0",
    "twilio>=8.1.0",
    "pushbullet.py>=0.11.0",
    "torch==2.2.1",
    "torchvision==0.17.1",
    "pip>=23.0.0",
]

[project.scripts]
moodeng = "moodeng.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"